src/components/common/chatSearch/ChatSearch.css
.input_filed_search_style {
    flex-shrink: 0;
    color: #475569;
    /* padding-left: 30px; */
    font-size: 14px;
    min-height: 65px;
    display: flex;
    align-items: center;
    line-height: 1.5;
    width: 92%;
  }
  .search_input{
    width: 100%;
    border-color: rgba(240, 255, 240, 0);
    outline: none;
    overflow-y: auto;
    min-height: 30px;

    resize: none;

    max-height: 140px;
    padding-left: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    /* background-color: yellow; */
    border-radius: 25px;
  }
  
  .input_field_main_cont {
    width: 100%;
    flex-grow: 1;
    max-height: 180vh;
    display: flex;
    flex-direction: row;
    /* justify-content: space-evenly; */
    align-items: center;
    border-radius: 35px;
    border: 1px solid var(--Neutral-400, #94a3b8);
    position: relative; 
    /* background-color: red; */
    justify-content: space-between;
    padding-left: 7px;
  }
  
  
  .send_icon {

    width: 50px;
    height: 50px;
    flex-shrink: 0;
    fill: var(--Neutral-200, #e2e8f0);
    margin-top: 7px;

  }



  .icon_alignment {
    position: absolute;
    bottom: 0; 
    right: 0;
    /* display: flex;
    flex-direction: column;
    justify-content: flex-end;
    background-color: yellow;
    align-items: end; */
  }

  

